<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/helpnurture" />


    <TextView
        android:id="@+id/upper"
        android:layout_width="395dp"
        android:layout_height="73dp"
        android:layout_below="@id/imageView2"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:text="@string/para1"/>

    <TextView
        android:id="@+id/mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upper"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:text="@string/para2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mid"
        android:padding="10dp"
        android:text="@string/para3" />

</RelativeLayout>